src/tests/snapshots/niri__tests__window_opening__check_target_size@fsF-dwP0.25-dhU-b.snap
---
source: src/tests/window_opening.rs
description: "config:\nwindow-rule {\n    open-fullscreen false\n    default-column-width { proportion 0.25; }\n    default-window-height {  }\n    border { on; }\n}"
expression: snapshot
---
initial configure:
size: 292 × 680, bounds: 1240 × 680, states: []

post-map configures:
size: 292 × 680, bounds: 1240 × 680, states: [Activated]
