src/tests/snapshots/niri__tests__window_opening__check_target_size@fsF-dwP0.25-dhU-wfsBN-t.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: BN\nconfig:\nwindow-rule {\n    open-fullscreen false\n    default-column-width { proportion 0.25; }\n    default-window-height {  }\n    default-column-display \"tabbed\"\n}\n\nlayout {\n    tab-indicator {\n        place-within-column\n    }\n}"
expression: snapshot
---
initial configure:
size: 291 × 688, bounds: 1239 × 688, states: []

post-map configures:
size: 291 × 688, bounds: 1239 × 688, states: [Activated]
